kubernetes/apps/default/whoami/app/tailscale-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-tailscale
  annotations:
    tailscale.com/hostname: whoami
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: whoami
