kubernetes/apps/default/whoami/app/tailscale-ingress.yaml
---
# yaml-language-server: $schema=https://schemas.vwn.app/gateway.networking.k8s.io/ingress_v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
spec:
  defaultBackend:
    service:
      name: whoami
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - whoami
